# qwen-finetune-pipeline

./: .env.example  .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  QUICKSTART_WINDOWS.md  README.md  RTX5090_SETUP_GUIDE.md  instructioins.md  pyproject.toml  requirements.txt
configs/: chunking.yaml  docling.yaml  train_qlora.yaml
ollama/: Modelfile  README.md
scripts/: 01_pdf_to_md.py  02_clean_md.py  03_chunk_to_jsonl.py  04_train_qlora.py  05_merge_lora.py  06_convert_to_gguf.ps1  06_convert_to_gguf.sh  07_make_ollama_model.ps1  07_make_ollama_model.sh  install_rtx5090_support.ps1  test_installation.py  verify_rtx5090.py
